--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "setup": "npm install && npx svelte-kit sync",
+    "slicemachine": "start-slicemachine"
   },
   "devDependencies": {
+    "@slicemachine/adapter-sveltekit": "^0.3.83",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "slice-machine-ui": "^2.18.1",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.0"
   },
   "dependencies": {
+    "@prismicio/client": "^7.20.1",
+    "@prismicio/svelte": "^2.0.0",
     "@types/node": "^20.0.0"
   }
 }
