Fix vercel.json configuration for SvelteKit deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-  "functions": {
-    "src/routes/**/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "buildCommand": "npm run build",
+  "framework": "sveltekit"
 }
