Add build optimization and bundle analysis tools
- Add bundle analysis script for performance monitoring
- Configure manual chunk splitting for vendor libraries
- Enable CSS code splitting for better caching
- Separate Prismic dependencies into vendor chunk
- Add build:analyze script for bundle size inspection
- Optimize Rollup configuration for production builds

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "npx svelte-kit sync && vite build",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer .svelte-kit/output/client/_app",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
