--- a/static/manifest.json
+++ b/static/manifest.json
@@ -11,14 +11,20 @@
   "lang": "de",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/cropped-Logo-Taupe.webp",
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/webp",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ],
