UPDATE SEO optimizations

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Hotel Ludwig van Beethoven",
   "short_name": "HLVB",
-  "description": "Luxury hotel in Berlin - Hotel Ludwig van Beethoven",
+  "description": "Hotel Ludwig van Beethoven Website",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f6f4f3",
